--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-fast-image": "^8.3.6",
     "react-native-gesture-handler": "1.10.3",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "3.4.0",
     "react-native-svg": "12.1.1",
-    "react-redux": "7.2.4",
-    "recyclerlistview": "^3.0.5"
+    "react-redux": "7.2.4"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
