--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
     "@reduxjs/toolkit": "1.6.0",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
+    "luxon": "2.0.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-fast-image": "^8.3.6",
+    "react-native-config": "1.4.2",
+    "react-native-fast-image": "8.3.6",
     "react-native-gesture-handler": "1.10.3",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "3.2.0",
@@ -30,12 +32,13 @@
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "2.0.0",
     "@types/jest": "26.0.23",
-    "@types/lodash": "^4.14.171",
-    "babel-plugin-module-resolver": "4.1.0",
+    "@types/lodash": "4.14.171",
+    "@types/luxon": "^1.27.1",
     "@types/react-native": "0.64.5",
     "@types/react-redux": "7.1.18",
     "@types/react-test-renderer": "16.9.2",
     "babel-jest": "26.6.3",
+    "babel-plugin-module-resolver": "4.1.0",
     "eslint": "7.30.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "3.4.0",
