--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native-config": "1.4.2",
     "react-native-fast-image": "8.3.6",
     "react-native-gesture-handler": "1.10.3",
+    "react-native-pager-view": "^5.3.2",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "3.4.0",
     "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.0.1",
     "react-redux": "7.2.4"
   },
   "devDependencies": {
