--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-fast-image": "8.3.6",
     "react-native-gesture-handler": "1.10.3",
     "react-native-pager-view": "^5.3.2",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "3.4.0",
